finished signup static and responsive pages

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Spotify Clone" />
 
     <!-- FAVICON -->
-    <link rel="icon" href="{% static 'branding/logo.png' %}" />
+    <link rel="icon" href="{% static 'branding/black-logo.png' %}" />
 
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
