--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -39,8 +39,8 @@
     <div id="top-navigation">
       <img src="{% static 'branding/logo-text.png' %}"/>
       <div id="top-nav-links">
-        <a href="">Log in</a>
-        <a href="">Sign up</a>
+        <a href="{% url 'login_page' %}">Log in</a>
+        <a href="{% url 'signup_page' %}">Sign up</a>
         <a href="">Demo</a>
       </div>
     </div>
@@ -55,8 +55,8 @@
     <div id="hidden-mobile-nav-panel">
       <div id="top-nav-links-hidden-panel">
         <button id="hidden_panel_close_button"><span class="fa fa-close"></span></button>
-        <a href="">Log in</a>
-        <a href="">Sign up</a>
+        <a href="{% url 'login_page' %}">Log in</a>
+        <a href="{% url 'signup_page' %}">Sign up</a>
         <a href="">Demo</a>
         <img src="{% static 'branding/logo-text.png' %}"/>
       </div>
@@ -85,7 +85,7 @@
         <h1>Listening is <span>everything</span></h1>
         <p>Millions of songs and podcasts. No credit card needed.</p>
         <a href="">DEMO</a>
-        <a href="">GET SPOTIFY CLONE</a>
+        <a href="{% url 'signup_page' %}">GET SPOTIFY CLONE</a>
       </div>
     </div>
 
