finished the static side of the base

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,1 +1,14 @@
-home
+{% extends 'base.html' %}
+{% load static %}
+
+{% block css_links %}
+  <link rel="stylesheet" type="text/css" href="" />
+{% endblock %}
+
+{% block content %}
+
+<p>
+  home
+  </p>
+
+{% endblock %}
