--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,3 +3,383 @@
 green: #1ED760
 
  */
+
+ body {
+   margin: 0px;
+   padding: 0px;
+ }
+
+ p, a, h1, h2, h3, h4, h5, h6 {
+   font-family: 'Inter', sans-serif;
+ }
+
+
+/* ------------------------- left part ------------------------- */
+#base-left-navigation {
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 250px;
+  background-color: #040404;
+}
+
+#logo-link {
+
+}
+
+#logo-link img {
+  height: 50px;
+  margin-top: 25px;
+  margin-left: 25px;
+}
+
+#left-navbar-main-links {
+  border: 1px solid transparent;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+#left-navbar-main-links a {
+  display: block;
+  width: 100%;
+  color: #B3B3B3;
+  text-decoration: none;
+  background-color: transparent;
+  margin: 3px 0px;
+  padding: 8px 0px;
+  border-radius: 5px;
+}
+
+#left-navbar-main-links a:hover {
+  transition: 0.2s;
+  color: white;
+}
+
+#left-navbar-main-links a span {
+  margin-right: 10px;
+  margin-left: 15px;
+  font-size: 22px;
+  vertical-align: middle;
+}
+
+.active-main-link {
+  background-color: #282828 !important;
+  color: white !important;
+}
+
+#playlist-links {
+  border: 1px solid transparent;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 5px;
+}
+
+#playlist-links h3 {
+  color: #B3B3B3;
+  font-size: 12px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+}
+
+#main-playlist-link {
+  margin-bottom: 10px;
+}
+
+#main-playlist-link a {
+  color: #B3B3B3;
+  margin-right: 15px;
+  margin-left: 15px;
+  text-decoration: none;
+  font-size: 15px;
+  width: 100%;
+  display: block;
+  margin-bottom: 0px;
+}
+
+#main-playlist-link a:hover {
+  transition: 0.2s;
+  color: white;
+}
+
+#main-playlist-link a span {
+  background-color: #B3B3B3;
+  color: black;
+  padding: 8px 10px;
+  margin-right: 10px;
+  vertical-align: middle;
+  font-size: 16px;
+}
+
+#liked-songs-main-link span {
+  padding: 8px !important;
+  background: #4568DC;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #B06AB3, #4568DC);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #B06AB3, #4568DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  color: white !important;
+}
+
+#horizontal-left-nav-line {
+  border-bottom: 1px solid #282828;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+#playlists-list {
+  border: 1px solid transparent;
+  width: 90%;
+  margin: 0 auto;
+  height: 180px;
+  margin-bottom: 90px;
+  overflow-y: scroll;
+}
+
+#playlists-list a {
+  color: #B3B3B3;
+  margin-right: 15px;
+  margin-left: 15px;
+  text-decoration: none;
+  font-size: 14px;
+  width: 100%;
+  display: block;
+  margin-bottom: 15px;
+}
+
+#playlists-list a:hover {
+  transition: 0.2s;
+  color: white;
+}
+
+/* ------------------------- right part ------------------------- */
+#base-right-part {
+  border: 0px solid black;
+  position: fixed;
+  z-index: 99;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 90px;
+  margin-left: 250px;
+  overflow-y: scroll;
+  background-color: #131313;
+}
+
+/* ------------------------- bottom part ------------------------- */
+#base-bottom-part {
+  position: fixed;
+  z-index: 999;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: #282828;
+  height: 90px;
+  border: 1px solid black;
+  text-align: center;
+}
+
+#base-bottom-left-box {
+  width: 32%;
+  border: 1px solid transparent;
+  display: inline-block;
+  height: 80px;
+  margin-top: 4px;
+  vertical-align: top;
+  text-align: left;
+}
+
+#now-playing-img {
+  background-color: grey;
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  margin-left: 0px;
+  vertical-align: middle;
+  margin-top: 15px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../test/test.jpg");
+  background-size: cover;
+}
+
+#now-playing-info {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 20px;
+}
+
+#now-playing-info p {
+  margin: 0px;
+  color: white;
+  font-size: 13px;
+  margin-top: 10px;
+}
+
+#now-playing-info a {
+  display: block;
+  margin: 0px;
+  text-decoration: none;
+  color: #B3B3B3;
+  font-size: 12px;
+  margin-top: 2px;
+}
+
+#now-playing-info a:hover {
+  color: white;
+  text-decoration: underline;
+}
+
+#base-bottom-left-box form {
+  float: right;
+  margin-top: 20px;
+  margin-right: 70px;
+}
+
+#base-bottom-left-box form input {
+  background-color: transparent;
+  border: 0px;
+  font-size: 25px;
+  color: #B3B3B3;
+}
+
+#base-bottom-left-box form input:hover {
+  cursor: pointer;
+}
+
+#base-bottom-middle-box {
+  width: 32%;
+  border: 1px solid transparent;
+  display: inline-block;
+  height: 80px;
+  margin-top: 4px;
+  vertical-align: top;
+}
+
+#base-bottom-top-box {
+  text-align: center;
+  padding-top: 8px;
+}
+
+#base-bottom-top-box button {
+  font-size: 15px;
+  background-color: transparent;
+  border: 1px solid transparent;
+  color: #B3B3B3;
+  display: inline-block;
+  margin: 0px 7px;
+  vertical-align: middle;
+}
+
+#play-btn {
+  font-size: 35px;
+  vertical-align: middle;
+}
+
+#base-bottom-top-box button:hover {
+  color: white;
+  cursor: pointer;
+}
+
+#base-bottom-bottom-box {
+
+}
+
+#base-bottom-bottom-box p {
+  display: inline-block;
+  margin-top: 0px;
+  color: #B3B3B3;
+  font-size: 11px;
+}
+
+#music-progress-bar {
+  display: inline-block;
+  vertical-align: middle;
+  height: 4px;
+  background-color: grey;
+  border-radius: 5px;
+  width: 75%;
+}
+
+#base-bottom-right-box {
+  width: 32%;
+  border: 1px solid transparent;
+  display: inline-block;
+  height: 80px;
+  margin-top: 4px;
+  vertical-align: top;
+  padding-top: 30px;
+  text-align: right;
+}
+
+#base-bottom-right-box a {
+  display: inline-block;
+  color: #B3B3B3;
+  margin-right: 20px;
+}
+
+#base-bottom-right-box p {
+  margin: 0px;
+  vertical-align: middle;
+  display: inline-block;
+  color: #B3B3B3;
+}
+
+#sound-bar {
+  display: inline-block;
+  vertical-align: middle;
+  height: 4px;
+  background-color: grey;
+  border-radius: 5px;
+  width: 150px;
+  margin-left: 10px;
+  margin-right: 20px;
+}
+
+
+
+
+/* Mobile Small  --------------------------------------------------------- */
+@media screen and (min-width: 0px) and (max-width: 320px) {
+
+}
+
+
+/* Mobile Medium  --------------------------------------------------------- */
+@media screen and (min-width: 321px) and (max-width: 375px) {
+
+}
+
+
+/* Mobile Large - --------------------------------------------------------- */
+@media screen and (min-width: 376px) and (max-width: 425px) {
+}
+
+
+/* Tablet - --------------------------------------------------------------- */
+@media screen and (min-width: 426px) and (max-width: 768px) {
+
+
+}
+
+
+/* Laptop ------------------------------------------------------------------ */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* nothing for now */
+}
+
+
+/* Laptop Large -------------------------------------------------------------*/
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+  /* nothing for now */
+}
+
+
+/* 4K Large Desktop ------------------------------------------------------- */
+@media screen and (min-width: 1441px) {
+
+}
