nearly finished artists pages

--- a/templates/artist/artist_page.html
+++ b/templates/artist/artist_page.html
@@ -17,22 +17,158 @@
   </div>
 </div>
 
+<div id="banner-blur-effect"></div>
+
 <!-- play button -->
 <div id="play-button">
   <button><span class="fa fa-play"></span></button>
 </div>
 
-
 <!-- popular songs -->
+<div id="popular-songs-container">
+  <h2>Popular</h2>
+  <!-- song cell -->
+  <div id="song-cell">
+      <p id="song-cell-id">1</p>
+      <div id="song-img"></div>
+      <p id="song-cell-title">O Children</p>
 
-<!-- featuring the artist -->
+      <p id="song-cell-time">6:51</p>
+      <form>
+        <input type="submit" value="&#9829;" />
+      </form>
+      <p id="song-cell-listener-data">34,000,000</p>
+  </div><!--/cell -->
 
-<!-- albums and their songs -->
+  <!-- song cell -->
+  <div id="song-cell">
+      <p id="song-cell-id">1</p>
+      <div id="song-img"></div>
+      <p id="song-cell-title">O Children</p>
+
+      <p id="song-cell-time">6:51</p>
+      <form>
+        <input type="submit" value="&#9829;" />
+      </form>
+      <p id="song-cell-listener-data">34,000,000</p>
+  </div><!--/cell -->
+
+  <!-- song cell -->
+  <div id="song-cell">
+      <p id="song-cell-id">1</p>
+      <div id="song-img"></div>
+      <p id="song-cell-title">O Children</p>
+
+      <p id="song-cell-time">6:51</p>
+      <form>
+        <input type="submit" value="&#9829;" />
+      </form>
+      <p id="song-cell-listener-data">34,000,000</p>
+  </div><!--/cell -->
+</div>
+
+<div id="clear-float"></div>
+
+<!-- albums -->
+<div id="albums-container">
+  <h4>Albums</h4>
+
+  <!-- album cell -->
+  <div id="album-cell">
+    <div id="album-cell-header">
+      <div id="album-cell-header-left-part">
+        <div id="album-cover-photo"></div>
+      </div>
+      <div id="album-cell-header-right-part">
+        <p>2018</p>
+        <h1>From There To Here (Original Television Soundtrack)</h1>
+      </div>
+    </div>
+    <div id="album-cell-songs">
+      <div id="album-cell-song-cell">
+        <p id="album-cell-song-cell-id">1</p>
+        <form>
+          <input type="submit" value="&#9829;" />
+        </form>
+        <!-- max char: 21 for mobile -->
+        <p id="album-cell-song-cell-title">Succession (Main Pian...</p>
+        <p id="album-cell-song-cell-time">5:21</p>
+      </div>
+
+      <div id="album-cell-song-cell">
+        <p id="album-cell-song-cell-id">1</p>
+        <form>
+          <input type="submit" value="&#9829;" />
+        </form>
+        <p id="album-cell-song-cell-title">Succession (Main Piano Suite) - Extended Version</p>
+        <p id="album-cell-song-cell-time">5:21</p>
+      </div>
+    </div>
+  </div><!-- /cell -->
+
+  <!-- album cell -->
+  <div id="album-cell">
+    <div id="album-cell-header">
+      <div id="album-cell-header-left-part">
+        <div id="album-cover-photo"></div>
+      </div>
+      <div id="album-cell-header-right-part">
+        <p>2018</p>
+        <h1>From There To Here (Original Television Soundtrack)</h1>
+      </div>
+    </div>
+    <div id="album-cell-songs">
+      <div id="album-cell-song-cell">
+        <p id="album-cell-song-cell-id">1</p>
+        <form>
+          <input type="submit" value="&#9829;" />
+        </form>
+        <p id="album-cell-song-cell-title">Succession (Main Piano Suite) - Extended Version</p>
+        <p id="album-cell-song-cell-time">5:21</p>
+      </div>
+
+      <div id="album-cell-song-cell">
+        <p id="album-cell-song-cell-id">1</p>
+        <form>
+          <input type="submit" value="&#9829;" />
+        </form>
+        <p id="album-cell-song-cell-title">Succession (Main Piano Suite) - Extended Version</p>
+        <p id="album-cell-song-cell-time">5:21</p>
+      </div>
+    </div>
+  </div><!-- /cell -->
+
+</div>
 
 <!-- fans also like -->
+<div id="fans-also-like-contianer">
+  <h2>Fans also like</h2>
 
-<!-- about -->
+  <div id="fans-also-like-cell">
+    <div id="fans-also-like-cell-artist-img"></div>
+    <h3>Nick Cave</h3>
+    <p>Artist</p>
+  </div>
 
+  <div id="fans-also-like-cell">
+    <div id="fans-also-like-cell-artist-img"></div>
+    <h3>Nick Cave</h3>
+    <p>Artist</p>
+  </div>
+
+  <div id="fans-also-like-cell">
+    <div id="fans-also-like-cell-artist-img"></div>
+    <h3>Nick Cave</h3>
+    <p>Artist</p>
+  </div>
+
+  <div id="fans-also-like-cell">
+    <div id="fans-also-like-cell-artist-img"></div>
+    <h3>Nick Cave</h3>
+    <p>Artist</p>
+  </div>
+
+</div>
 
 
 {% endblock %}
