--- a/static/css/artist/artist_page.css
+++ b/static/css/artist/artist_page.css
@@ -1,4 +1,6 @@
-
+#clear-float {
+  clear: both;
+}
 
 /* --------------------------- top navigation ------------------------------ */
 
@@ -16,6 +18,10 @@
   background-repeat: no-repeat;
   background-image: url("../../test/test.jpg");
   background-size: cover;
+}
+
+#banner-blur-effect {
+  display: none;
 }
 
 #top-banner-info {
@@ -42,9 +48,11 @@
 
 /* --------------------------- play button ------------------------------ */
 #play-button {
-  width: 100%;
-  margin-left: 25px;
-  margin-top: 30px;
+  width: 20%;;
+  margin: 0px;
+  position: relative;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 #play-button button:hover {
@@ -69,15 +77,797 @@
 }
 
 /* ------------------------- popular songs ------------------------------ */
+#popular-songs-container {
+  height: 100px;
+  width: 95%;
+  border: 1px solid transparent;
+  position: relative;
+  margin: 0 auto;
+  position: relative;
+}
 
+#popular-songs-container h2 {
+  color: white;
+}
 
-/* ------------------ featuring the artist ------------------------------ */
+#song-cell {
+  border: 1px solid transparent;
+  padding: 0px;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+#song-cell p {
+  display: inline-block;
+  color: #B3B3B3;
+}
+
+#song-img {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: #B3B3B3;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../test/test.jpg");
+  vertical-align: middle;
+}
+
+#song-cell form {
+  display: inline-block;
+  float: right;
+  margin-right: 30px;
+}
+
+#song-cell form input {
+  background-color: transparent;
+  border: 1px solid transparent;
+  color: #B3B3B3;
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+#song-cell-id {
+  margin-right: 20px;
+
+}
+
+#song-cell-title {
+  color: white !important;
+  margin-left: 10px;
+}
+
+#song-cell-listener-data {
+  float: right;
+  margin-right: 20%;
+  font-size: 15px;
+  vertical-align: middle;
+}
+
+#song-cell-time {
+  float: right;
+  margin-right: 30px;
+}
+
+#song-cell:hover {
+  background-color: #2B2B2B;
+  cursor: pointer;
+  color: white !important;
+}
+
+#song-cell:hover p {
+  color: white !important;
+}
 
 
 /* ---------------- albums and their songs ------------------------------ */
+#albums-container {
+  border: 1px solid transparent;
+  width: 95%;
+  height: auto;
+  position: relative;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
 
+#albums-container h4 {
+  color: white;
+  padding: 0px;
+  margin: 0px;
+  border-bottom: 1px solid #282828;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+#album-cell {
+  border: 1px solid transparent;
+  width: 100%;
+  height: auto;
+  margin-bottom: 50px;
+}
+
+#album-cell-header {
+
+}
+
+#album-cell-header-left-part {
+  height: auto;
+  width: 20%;
+  border: 1px solid transparent;
+  display: inline-block;
+  vertical-align: top;
+
+}
+
+#album-cover-photo {
+  height: 130px;
+  width: 150px;
+  background-color: #B3B3B3;
+  margin: 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url("../../test/test.jpg");
+  background-size: cover;
+}
+
+#album-cell-header-right-part {
+  height: auto;
+  width: 78%;
+  border: 1px solid transparent;
+  display: inline-block;
+  vertical-align: top;
+}
+
+#album-cell-header-right-part p {
+  color: #B3B3B3;
+  margin: 0px;
+}
+
+#album-cell-header-right-part h1 {
+  color: white;
+  margin: 0px;
+  font-size: 30px;
+}
+
+#album-cell-songs {
+  border: 1px solid transparent;
+  width: 96%;
+  margin: 0 auto;
+}
+
+#album-cell-song-cell {
+  border-bottom: 1px solid #282828;
+  padding: 10px 0px;
+}
+
+#album-cell-song-cell:hover {
+  background-color: #2B2B2B;
+  cursor: pointer;
+  color: white !important;
+}
+
+#album-cell-song-cell:hover p {
+  color: white !important;
+}
+
+#album-cell-song-cell-id {
+  margin: 0px;
+  display: inline-block;
+  color: #B3B3B3;
+  margin-right: 10px;
+}
+
+#album-cell-song-cell form {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#album-cell-song-cell form input {
+  background-color: transparent;
+  border: 1px solid transparent;
+  color: #B3B3B3;
+  font-size: 20px;
+  vertical-align: middle;
+}
+
+#album-cell-song-cell-title {
+  color: white;
+  display: inline-block;
+  margin: 0px;
+}
+
+#album-cell-song-cell-time {
+  float: right;
+  vertical-align: top;
+  color: #B3B3B3;
+  margin: 0px;
+}
 
 /* ------------------------ fans also like ------------------------------ */
+#fans-also-like-contianer {
+  border: 1px solid transparent;
+  height: auto;
+  width: 95%;
+  margin: 0 auto;
+  margin-bottom: 80px;
+  margin-top: -30px;
+  text-align: center;
+}
+
+#fans-also-like-contianer h2 {
+  color: white;
+  text-align: left;
+}
+
+#fans-also-like-cell {
+  border: 1px solid transparent;
+  background-color: #181818;
+  border-radius: 15px;
+  text-align: center;
+  width: 23%;
+  padding: 15px 0px;
+  display: inline-block;
+  margin-right: 4px;
+  margin-left: 2px;
+}
+
+#fans-also-like-cell:hover {
+  cursor: pointer;
+  transition: 0.3s;
+  background-color: #282828;
+}
+
+#fans-also-like-cell-artist-img {
+  height: 170px;
+  width: 170px;
+  border-radius: 50%;
+  background-color: #B3B3B3;
+  margin: 0 auto;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("../../test/test.jpg");
+}
+
+#fans-also-like-cell h3 {
+  color: white;
+}
+
+#fans-also-like-cell p {
+  color: #B3B3B3;
+  margin: 0px;
+}
 
 
-/* -------------------------------- about ------------------------------ */
+/* Mobile Small  --------------------------------------------------------- */
+@media screen and (min-width: 0px) and (max-width: 320px) {
+  #top-banner {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #top-banner-info {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 15px;
+  }
+
+  #top-banner-info h1 {
+    font-size: 45px;
+  }
+
+  #top-banner-info p {
+    margin-top: 5px;
+    font-size: 13px;
+  }
+
+
+  /* --------------------------- play button ------------------------------ */
+  #play-button {
+    margin: 0 auto;
+    margin-top: -15px;
+  }
+
+  /* ------------------------- popular songs ------------------------------ */
+  #popular-songs-container {
+    width: 98%;
+    text-align: center;
+    padding: 0px;
+    border: 1px solid transparent;
+  }
+
+  #popular-songs-container h2 {
+    font-size: 22px;
+  }
+
+  #song-cell {
+    float: left;
+  }
+
+  #song-cell p {
+    display: inline-block;
+    color: #B3B3B3;
+  }
+
+  #song-img {
+    height: 30px;
+    width: 30px;
+  }
+
+  #song-cell form {
+    margin-right: 0px;
+  }
+
+  #song-cell form input {
+    background-color: transparent;
+    border: 1px solid transparent;
+    color: #B3B3B3;
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+  #song-cell-id {
+    margin-right: 10px;
+  }
+
+  #song-cell-title {
+    margin-left: 10px;
+  }
+
+  #song-cell-listener-data {
+    margin-right: 10px;
+  }
+
+  #song-cell-time {
+    margin-right: 0px;
+  }
+
+  /* ---------------- albums and their songs ------------------------------ */
+  #albums-container {
+    width: 95%;
+  }
+
+  #albums-container h4 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  #album-cell-header-left-part {
+    width: 30%;
+  }
+
+  #album-cover-photo {
+    height: 100px;
+    width: auto;
+  }
+
+  #album-cell-header-right-part {
+    width: 65%;
+  }
+
+  #album-cell-header-right-part p {
+    font-size: 13px;
+  }
+
+  #album-cell-header-right-part h1 {
+    font-size: 20px;
+  }
+
+  #album-cell-songs {
+    width: 96%;
+  }
+
+  #album-cell-song-cell {
+    padding: 10px 0px;
+  }
+
+  #album-cell-song-cell-id {
+    margin-right: 5px;
+  }
+
+  #album-cell-song-cell form {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  #album-cell-song-cell form input {1
+    font-size: 18px;
+  }
+
+  #album-cell-song-cell-title {
+    font=shape-outside: 14px;
+  }
+
+  #album-cell-song-cell-time {
+    font-size: 14px;
+  }
+
+  /* ------------------------ fans also like ------------------------------ */
+  #fans-also-like-contianer {
+    width: 98%;
+    margin-bottom: 40px;
+  }
+
+  #fans-also-like-contianer h2 {
+    text-align: center;
+  }
+
+  #fans-also-like-cell {
+    width: 45%;
+    margin-right: 1px;
+    margin-left: 1px;
+    margin-bottom: 4px;
+  }
+
+  #fans-also-like-cell-artist-img {
+    height: 100px;
+    width: 100px;
+  }
+
+}
+
+
+/* Mobile Medium  --------------------------------------------------------- */
+@media screen and (min-width: 321px) and (max-width: 375px) {
+  #top-banner {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #top-banner-info {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 15px;
+  }
+
+  #top-banner-info h1 {
+    font-size: 45px;
+  }
+
+  #top-banner-info p {
+    margin-top: 5px;
+    font-size: 13px;
+  }
+
+
+  /* --------------------------- play button ------------------------------ */
+  #play-button {
+    margin: 0 auto;
+    margin-top: -15px;
+  }
+
+  /* ------------------------- popular songs ------------------------------ */
+  #popular-songs-container {
+    width: 98%;
+    text-align: center;
+    padding: 0px;
+    border: 1px solid transparent;
+  }
+
+  #popular-songs-container h2 {
+    font-size: 22px;
+  }
+
+  #song-cell {
+    float: left;
+  }
+
+  #song-cell p {
+    display: inline-block;
+    color: #B3B3B3;
+  }
+
+  #song-img {
+    height: 30px;
+    width: 30px;
+  }
+
+  #song-cell form {
+    margin-right: 0px;
+  }
+
+  #song-cell form input {
+    background-color: transparent;
+    border: 1px solid transparent;
+    color: #B3B3B3;
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+  #song-cell-id {
+    margin-right: 10px;
+  }
+
+  #song-cell-title {
+    margin-left: 10px;
+  }
+
+  #song-cell-listener-data {
+    margin-right: 10px;
+  }
+
+  #song-cell-time {
+    margin-right: 0px;
+  }
+
+  /* ---------------- albums and their songs ------------------------------ */
+  #albums-container {
+    width: 95%;
+  }
+
+  #albums-container h4 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  #album-cell-header-left-part {
+    width: 30%;
+  }
+
+  #album-cover-photo {
+    height: 100px;
+    width: auto;
+  }
+
+  #album-cell-header-right-part {
+    width: 65%;
+  }
+
+  #album-cell-header-right-part p {
+    font-size: 13px;
+  }
+
+  #album-cell-header-right-part h1 {
+    font-size: 20px;
+  }
+
+  #album-cell-songs {
+    width: 96%;
+  }
+
+  #album-cell-song-cell {
+    padding: 10px 0px;
+  }
+
+  #album-cell-song-cell-id {
+    margin-right: 5px;
+  }
+
+  #album-cell-song-cell form {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  #album-cell-song-cell form input {1
+    font-size: 18px;
+  }
+
+  #album-cell-song-cell-title {
+    font=shape-outside: 14px;
+  }
+
+  #album-cell-song-cell-time {
+    font-size: 14px;
+  }
+
+  /* ------------------------ fans also like ------------------------------ */
+  #fans-also-like-contianer {
+    width: 98%;
+    margin-bottom: 40px;
+  }
+
+  #fans-also-like-contianer h2 {
+    text-align: center;
+  }
+
+  #fans-also-like-cell {
+    width: 45%;
+    margin-right: 1px;
+    margin-left: 1px;
+    margin-bottom: 4px;
+  }
+
+  #fans-also-like-cell-artist-img {
+    height: 100px;
+    width: 100px;
+  }
+
+}
+
+
+/* Mobile Large - --------------------------------------------------------- */
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  #top-banner {
+    height: 50vh;
+    width: 100%;
+  }
+
+  #top-banner-info {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 15px;
+  }
+
+  #top-banner-info h1 {
+    font-size: 45px;
+  }
+
+  #top-banner-info p {
+    margin-top: 5px;
+    font-size: 13px;
+  }
+
+
+  /* --------------------------- play button ------------------------------ */
+  #play-button {
+    margin: 0 auto;
+    margin-top: -15px;
+  }
+
+  /* ------------------------- popular songs ------------------------------ */
+  #popular-songs-container {
+    width: 98%;
+    text-align: center;
+    padding: 0px;
+    border: 1px solid transparent;
+  }
+
+  #popular-songs-container h2 {
+    font-size: 22px;
+  }
+
+  #song-cell {
+    float: left;
+  }
+
+  #song-cell p {
+    display: inline-block;
+    color: #B3B3B3;
+  }
+
+  #song-img {
+    height: 30px;
+    width: 30px;
+  }
+
+  #song-cell form {
+    margin-right: 0px;
+  }
+
+  #song-cell form input {
+    background-color: transparent;
+    border: 1px solid transparent;
+    color: #B3B3B3;
+    font-size: 20px;
+    margin-top: 10px;
+  }
+
+  #song-cell-id {
+    margin-right: 10px;
+  }
+
+  #song-cell-title {
+    margin-left: 10px;
+  }
+
+  #song-cell-listener-data {
+    margin-right: 10px;
+  }
+
+  #song-cell-time {
+    margin-right: 0px;
+  }
+
+  /* ---------------- albums and their songs ------------------------------ */
+  #albums-container {
+    width: 95%;
+  }
+
+  #albums-container h4 {
+    font-size: 18px;
+    margin-bottom: 20px;
+  }
+
+  #album-cell-header-left-part {
+    width: 30%;
+  }
+
+  #album-cover-photo {
+    height: 100px;
+    width: auto;
+  }
+
+  #album-cell-header-right-part {
+    width: 65%;
+  }
+
+  #album-cell-header-right-part p {
+    font-size: 13px;
+  }
+
+  #album-cell-header-right-part h1 {
+    font-size: 20px;
+  }
+
+  #album-cell-songs {
+    width: 96%;
+  }
+
+  #album-cell-song-cell {
+    padding: 10px 0px;
+  }
+
+  #album-cell-song-cell-id {
+    margin-right: 5px;
+  }
+
+  #album-cell-song-cell form {
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  #album-cell-song-cell form input {1
+    font-size: 18px;
+  }
+
+  #album-cell-song-cell-title {
+    font=shape-outside: 14px;
+  }
+
+  #album-cell-song-cell-time {
+    font-size: 14px;
+  }
+
+  /* ------------------------ fans also like ------------------------------ */
+  #fans-also-like-contianer {
+    width: 98%;
+    margin-bottom: 40px;
+  }
+
+  #fans-also-like-contianer h2 {
+    text-align: center;
+  }
+
+  #fans-also-like-cell {
+    width: 45%;
+    margin-right: 1px;
+    margin-left: 1px;
+    margin-bottom: 4px;
+  }
+
+  #fans-also-like-cell-artist-img {
+    height: 100px;
+    width: 100px;
+  }
+
+}
+
+
+/* Tablet - --------------------------------------------------------------- */
+@media screen and (min-width: 426px) and (max-width: 768px) {
+
+
+}
+
+
+/* Laptop ------------------------------------------------------------------ */
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  /* nothing for now */
+}
+
+
+/* Laptop Large -------------------------------------------------------------*/
+@media screen and (min-width: 1025px) and (max-width: 1440px) {
+  /* nothing for now */
+}
+
+
+/* 4K Large Desktop ------------------------------------------------------- */
+@media screen and (min-width: 1441px) {
+
+}
