--- a/templates/artist/artist.html
+++ b/templates/artist/artist.html
@@ -9,19 +9,120 @@
 
 <!-- main banner -->
 <div id="main-banner">
-  <p>Verified Artist</p>
+  <p><span class="fa fa-check"></span> Verified Artist</p>
   <h1>MERO</h1>
   <h3>2,846,218 monthly listeners</h3>
 </div>
 
 <!-- follow button -->
+<div id="follow-play-button-banner">
+  <button><span class="fa fa-play"></span></button>
+</div>
 
 <!-- popular songs -->
+<div id="popular-songs-container">
+  <h3>Popular</h3>
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+  <div id="popular-song-cell">
+      <p id="song-index">1.</p>
+      <div id="album-img"></div>
+      <p>Gel Desem De Gelemem</p>
+      <p id="listen-amount">1,422,231</p>
+      <p id="song-lenght">4:43</p>
+      <form>
+        <input type="submit" value="&#9829;"/>
+      </form>
+  </div><!--/cell-->
+
+</div>
+
 
 <!-- Fans also like -->
+<div id="fans-like-container">
+    <h3>Fans also like</h3>
 
-<!-- about -->
+    <div id="fans-like-cell">
+      <div id="fan-also-like-artist-photo"></div>
+      <h3>Melek Mosso</h3>
+      <p>Artist</p>
+    </div>
 
-<!-- on tour -->
+    <div id="fans-like-cell">
+      <div id="fan-also-like-artist-photo"></div>
+      <h3>Melek Mosso</h3>
+      <p>Artist</p>
+    </div>
+
+    <div id="fans-like-cell">
+      <div id="fan-also-like-artist-photo"></div>
+      <h3>Melek Mosso</h3>
+      <p>Artist</p>
+    </div>
+
+    <div id="fans-like-cell">
+      <div id="fan-also-like-artist-photo"></div>
+      <h3>Melek Mosso</h3>
+      <p>Artist</p>
+    </div>
+
+</div>
 
 {% endblock %}
